achivements saving/loading on mobile, inventory mouse event fix

--- a/css/phonegap.less
+++ b/css/phonegap.less
@@ -42,7 +42,7 @@
 		padding-top: 20px;
 	}
 	.the-fucking-inventory {
-		display:none;
+
 		max-width:320px;
 		margin:0 auto;
 	}
@@ -86,6 +86,11 @@
 			color:#bbb;
 			border:solid 5px #ccc;
 		}
+	}
+	h2,
+	.the-fucking-gameinfo h2 {
+		text-align: center;
+		font-size: 1.6em;
 	}
 
 
